<resources>
    <string name="app_name">appCIE</string>
    <string name="back">Back</string>
    <string name="info">-- info --</string>
    <string name="home">Home</string>
    <string name="webview">WebView</string>
    <string name="qr_code">QR Code</string>
    <string name="appoggia_la_cie">Appoggia la CIE</string>
    <string name="scegli_la_modalit_di_autenticazione_che_preferisci">Scegli la modalità di autenticazione che preferisci</string>
    <string name="app_cie">app CIE</string>
    <string name="torna_al_menu">Torna al menu</string>
    <string name="errore">Errore?</string>
    <string name="inserisci_pin_8_cifre">Inserisci PIN (8 cifre)</string>
    <string name="continua">Continua</string>
    <string name="scegli">Scegli</string>
    <string name="pin">Pin:</string>
    <string name="name">Name</string>
    <string name="nome">Nome:</string>
    <string name="salva_in_rubrica">Salva in rubrica</string>
    <string name="salva">Salva</string>
    <string name="carica">Carica</string>
    <string name="svuota_rubrica">Svuota rubrica</string>
</resources>